src/Pages/Social/Social.module.css
.social {
    font-size: 1.6rem;
    margin-top: 68px;
    height: calc(100vh - 68px);
    display: grid;
    grid-template-columns: 21vw auto 21vw;
}

.name,
.message {
    -moz-user-select: text;
    -khtml-user-select: text;
    -webkit-user-select: text;
    -ms-user-select: text;
    user-select: text;
}

.leftSidebar {
    background-color: var(--bg-color);
    display: grid;
    grid-template-rows: auto min-content;
    overflow: hidden;
    border-right: 1px solid var(--primary-color);
}

.channels {
    overflow: auto;
}

.global {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    padding: 1rem;
    margin: 1rem;
    border-radius: 5px;
    cursor: pointer;
}

.global i {
    font-size: 6rem;
}

.global:hover {
    background-color: rgba(0, 0, 0, 0.05);
}

.friendsHeader {
    margin: 0 2rem;
}

.friends {
    background-color: var(--bg-color);
    padding: 1rem;
}

.friend {
    display: flex;
    gap: 1rem;
    padding: 1rem;
    border-radius: 5px;
    cursor: pointer;
}

.friend:hover {
    background-color: rgba(0, 0, 0, 0.05);
}

.friend.selected {
    background-color: rgba(0, 0, 0, 0.10);
}

.global.selected {
    background-color: rgba(0, 0, 0, 0.10);
}

.presence {
    color: gray;
    font-size: 1.4rem;
    margin-top: 0.4rem;
}

.presence::before {
    content: '';
    width: 1rem;
    height: 1rem;
    display: inline-block;
    border-radius: 50%;
    margin-right: .5rem;
}

.ONLINE.presence::before {
    background-color: green;
}

.AWAY.presence::before {
    background-color: orange;
}

.OFFLINE.presence::before {
    background-color: red;
}


.slimeBody {
    width: 6rem;
    height: 6rem;
}


.userStatus {
    background-color: var(--bg-color);
    padding: 2rem;
    display: flex;
    gap: 1rem;
    /* box-shadow: 0px 1px 20px rgba(20, 20, 20, 0.1); */
    border-top: 1px solid var(--primary-color);
}

.chat {
    display: grid;
    grid-template-rows: auto min-content;
    gap: 2rem;
    overflow: hidden;
}

.messages {
    display: flex;
    flex-direction: column-reverse;
    gap: 1rem;
    overflow: auto;
    padding: 2rem 2rem 0;

}

.message {
    display: inline-block;
    background-color: var(--bg-secondary-color);
    border: 1px solid var(--secondary-color);
    padding: 1rem;
    border-radius: .5rem;
    max-width: 90%;
    overflow-wrap: break-word;
    min-width: min-content;
    margin-top: .25rem;

}

.mine {
    text-align: end;
}

.mine .message {
    border-color: var(--primary-color);
    background-color: var(--bg-color);
}

.name {
    color: gray;
    font-size: 1.4rem;
}


.messageForm {
    display: flex;
    gap: 1rem;
    margin: 2rem;
}

.messageForm input {
    flex-grow: 1;
    padding: 1rem;
    border: 1px solid var(--primary-color);
    border-radius: .5rem;
}

.messageForm button {
    display: inline-flex;
    align-items: center;
    padding: .75rem;
    border: 1px solid var(--primary-color);
    color: var(--primary-color);
    background-color: transparent;
    border-radius: .5rem;
    cursor: pointer;
}

.messageForm button:hover {
    background-color: var(--bg-color);
}

.rightSidebar {
    background-color: var(--bg-color);
    display: grid;
    place-content: center;
    text-align: center;
    font-size: 1.2vw;
    padding: 2rem;
    border-left: 1px solid var(--primary-color);
}

.rightSidebar .slimeBody {
    width: 9vw;
    height: auto;
    transform: translateX(6%);
}

.World i {
    font-size: 9vw;
}

.rightSidebar p:first-child {
    font-size: 2vw;
}

